--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["video-editing", "audio-muting", "cross-platform"],
+  "keywords": [
+    "video-editing",
+    "audio-muting",
+    "cross-platform"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "devDependencies": {
@@ -15,7 +19,7 @@
   },
   "dependencies": {
     "child_process": "^1.0.2",
-    "path": "^0.12.7",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "path": "^0.12.7"
   }
 }
